crates/lowering_v1/tests/snapshots/concrete__lower_expression_operator_chain.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 25..27,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 29..31,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 33..35,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 37..39,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 41..43,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionOperatorChain,
                range: 25..43,
            },
        }: OperatorChain {
            head: Some(
                Id<syntax::cst::Expression>(0),
            ),
            tail: [
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(1),
                    ),
                },
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(2),
                    ),
                },
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(3),
                    ),
                },
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(4),
                    ),
                },
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
