crates/lowering_v1/tests/snapshots/concrete__lower_expression_record_access.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 23..25,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionRecordAccess,
                range: 23..33,
            },
        }: RecordAccess {
            expression: Some(
                Id<syntax::cst::Expression>(0),
            ),
            labels: Some(
                "foo.bar",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
