crates/lowering_v1/tests/snapshots/concrete__lower_expression_record_update.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 31..33,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 42..44,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "e",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionRecordUpdate,
                range: 23..48,
            },
        }: RecordUpdate {
            updates: [
                Leaf {
                    name: Some(
                        "a",
                    ),
                    expression: Some(
                        Id<syntax::cst::Expression>(0),
                    ),
                },
                Branch {
                    name: Some(
                        "c",
                    ),
                    updates: [
                        Leaf {
                            name: Some(
                                "d",
                            ),
                            expression: Some(
                                Id<syntax::cst::Expression>(1),
                            ),
                        },
                    ],
                },
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
