crates/lowering_v1/tests/snapshots/concrete__lower_type_application_chain.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 24..30,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Maybe",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 30..34,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Int",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeApplicationChain,
                range: 24..34,
            },
        }: ApplicationChain {
            head: Some(
                Id<syntax::cst::Type>(0),
            ),
            tail: [
                Id<syntax::cst::Type>(1),
            ],
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
