crates/lowering_v1/tests/snapshots/concrete__lower_type_arrow.snap
---
source: crates/lowering_v1/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 24..26,
            },
        }: Variable {
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 29..31,
            },
        }: Variable {
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 34..36,
            },
        }: Variable {
            name: Some(
                "c",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeArrow,
                range: 29..36,
            },
        }: Arrow {
            domain: Some(
                Id<syntax::cst::Type>(1),
            ),
            codomain: Some(
                Id<syntax::cst::Type>(2),
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeArrow,
                range: 24..36,
            },
        }: Arrow {
            domain: Some(
                Id<syntax::cst::Type>(0),
            ),
            codomain: Some(
                Id<syntax::cst::Type>(3),
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
